# CrawlKit

./: README.md  SECURITY.md  crawlkit.toml  gather.py  pyproject.toml  requirements.txt  seeds.txt
crawlkit/: __main__.py  cli.py  config.py  models.py  session.py  stats.py  utils.py
crawlkit/crawler/: fetcher.py  parser.py  queue.py  worker.py
crawlkit/exporters/: __init__.py  csv_exporter.py  json_exporter.py  jsonl_exporter.py  sqlite_exporter.py
crawlkit/webadmin/: auth.py  database.py  index.html  manager.py  server.py
crawlkit/webadmin/api/: __init__.py  campaigns.py  jobs.py  profiles.py  results.py  seeds.py
crawlkit/webui/: index.html  server.py
crawlkit_data/: crawlkit.db
crawlkit_data/jobs/2faa82c5/: mycrawler_01.csv
crawlkit_data/profiles/: TestConfig.toml
docs/: developer-guide.md  testing-guide.md  user-guide.md
sample/: output_dw_2mins_doms.json.bak  seeds_onion.txt.bak
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_crawler.py  test_engine_pause.py  test_exporters.py  test_fetcher.py  test_integration.py  test_manager.py  test_models.py  test_parser.py  test_queue.py  test_scaffold.py  test_session.py  test_stats.py  test_utils.py  test_webadmin_api.py  test_webui.py
