[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawlkit"
version = "3.0.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tldextract>=5.0",
    "rich>=13.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "pytest-aiohttp>=1.0",
    "ruff>=0.4",
]

[project.scripts]
crawlkit = "crawlkit.cli:app"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
